--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ target_include_directories(glad PUBLIC external/glad/include)
 
 find_package(OpenGL REQUIRED)
 find_package(glfw3 REQUIRED)
+find_package(glm CONFIG REQUIRED)
 
 add_subdirectory(src)
 add_executable(olg src/main.cpp)
@@ -16,5 +17,6 @@ target_link_libraries(olg PRIVATE
   glad
   glfw
   OpenGL::GL
+  glm::glm
   olgSrc
 )
