--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,11 +6,17 @@ list(REMOVE_ITEM source ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
 
 find_package(OpenGL REQUIRED)
 find_package(glfw3 REQUIRED)
+find_package(glm CONFIG REQUIRED)
 
 add_library(olgSrc STATIC ${source} ${headers})
 
 target_include_directories(olgSrc PUBLIC
-  ${CMAKE_CURRENT_SOURCE_DIR}/src
-  external/glad/include
+  ${CMAKE_CURRENT_SOURCE_DIR}
 )
-target_link_libraries(olgSrc PRIVATE glad glfw OpenGL::GL)
+
+target_link_libraries(olgSrc PRIVATE
+  glad
+  glfw
+  OpenGL::GL
+  glm::glm
+)
